[package]

name = "primes"
version = "0.2.0"
authors = ["Wendell Smith <wendellwsmith@gmail.com>"]
license="BSD-3-Clause"

keywords = ["math", "algorithms"]

description = """
A package for calculating primes using the Sieve of Eratosthenes, and using that to check if a
number is prime and calculating factors. Includes an iterator over all primes.
"""

readme="README.md"

documentation = "https://wackywendell.github.io/primes/"
homepage = "https://github.com/wackywendell/primes/tree/master"
repository = "https://github.com/wackywendell/primes/tree/master"