[package]

name = "primes"
version = "0.3.0"
authors = ["Wendell Smith <wendellwsmith@gmail.com>"]
license="BSD-3-Clause"
edition = "2018"

keywords = ["math", "algorithms"]

description = """
A package for calculating primes using the Sieve of Eratosthenes, and using that to check if a
number is prime and calculating factors. Includes an iterator over all primes.
"""

readme = "README.md"

documentation = "https://wackywendell.github.io/primes/"
homepage = "https://github.com/wackywendell/primes/tree/master"
repository = "https://github.com/wackywendell/primes/tree/master"

[lib]
# Disable benches in the normal library, we don't need them
# Without disabling this, running cargo bench -- --something-else gets somehow passed to both
# the cargo bench binary and the compiled benches binary
bench = false

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "benches"
harness = false